<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_feeds"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/metal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/kerajinan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_feeds"
        app:layout_constraintTop_toTopOf="@+id/iv_feeds" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rupiah"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/button_buy_corner_radius"
        android:text="@string/beli"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/item_price"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <View
        android:id="@+id/divider"
        style="@style/Widget.feeds.Divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_buy"
        app:layout_constraintStart_toStartOf="@id/item_price" />

</androidx.constraintlayout.widget.ConstraintLayout>